force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Active__c.field-meta.xml
<CustomField>
    <fullName>cpm__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this payment profile is active and available for use.</description>
    <inlineHelpText>Indica si este perfil de pago está activo y disponible para su uso.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>