force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__BIC_Code__c.field-meta.xml
<CustomField>
    <fullName>cpm__BIC_Code__c</fullName>
    <description>The BIC code for the debitors bank.</description>
    <inlineHelpText>El código BIC para el banco del deudores.</inlineHelpText>
    <label>BIC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>