force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Brand__c.field-meta.xml
<CustomField>
    <fullName>cpm__Brand__c</fullName>
    <label>Brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>