force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__CCV__c.field-meta.xml
<CustomField>
    <fullName>cpm__CCV__c</fullName>
    <description>Control number for this credit card</description>
    <label>CCV</label>
    <length>5</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>