force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>cpm__Credit_Card_Number__c</fullName>
    <description>The Credit Card number.</description>
    <label>Credit Card Number</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>