force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__Enforce_Uniqueness__c.field-meta.xml
<CustomField>
    <fullName>cpm__Enforce_Uniqueness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce Uniqueness</label>
    <type>Checkbox</type>
</CustomField>