force-app/main/default/objects/cpm__Payment_Profile__c/fields/cpm__IBAN__c.field-meta.xml
<CustomField>
    <fullName>cpm__IBAN__c</fullName>
    <description>The bank account number in IBAN format.</description>
    <inlineHelpText>El número de cuenta bancaria en formato IBAN.</inlineHelpText>
    <label>IBAN</label>
    <length>35</length>
    <type>Text</type>
</CustomField>