force-app/main/default/objects/cpm__Payment_Profile__c/fields/msf_HolderFirstName__c.field-meta.xml
<CustomField>
    <fullName>msf_HolderFirstName__c</fullName>
    <label>Nombre titular de la cuenta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>