force-app/main/default/objects/cpm__Payment_Profile__c/fields/msf_HolderLastName1__c.field-meta.xml
<CustomField>
    <fullName>msf_HolderLastName1__c</fullName>
    <label>Apellido 1 titular de la cuenta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>