force-app/main/default/objects/cpm__Payment_Profile__c/fields/msf_MemberId__c.field-meta.xml
<CustomField>
    <fullName>msf_MemberId__c</fullName>
    <formula>cpm__Contact__r.msf_CRMExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de miembro</label>
    <type>Text</type>
</CustomField>