force-app/main/default/objects/cpm__Payment_Profile__c/fields/msf_MemberIdName__c.field-meta.xml
<CustomField>
    <fullName>msf_MemberIdName__c</fullName>
    <formula>cpm__Contact__r.msf_CRMExternalId__c+&quot; &quot;+ cpm__Contact__r.FirstName+&quot; &quot;+ cpm__Contact__r.LastName+&quot; &quot;+ cpm__Contact__r.Suffix</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Miembro y Nombre</label>
    <type>Text</type>
</CustomField>