force-app/main/default/objects/cpm__Payment_Profile__c/fields/msf_NIF__c.field-meta.xml
<CustomField>
    <fullName>msf_NIF__c</fullName>
    <label>NIF del titular</label>
    <length>20</length>
    <type>Text</type>
</CustomField>