force-app/main/default/objects/cpm__Payment_Profile__c/fields/paysepa__Custom_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>paysepa__Custom_Tax_Code__c</fullName>
    <label>Custom Tax Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>