force-app/main/default/objects/cpm__Payment_Profile__c/recordTypes/cpm__Credit_Card.recordType-meta.xml
<RecordType>
    <fullName>cpm__Credit_Card</fullName>
    <active>true</active>
    <description>Stores Credit Card information</description>
    <label>Credit Card</label>
</RecordType>