force-app/main/default/objects/cpm__Payment_Profile__c/recordTypes/cpm__IBAN.recordType-meta.xml
<RecordType>
    <fullName>cpm__IBAN</fullName>
    <active>true</active>
    <description>Stores bank account information in the IBAN format</description>
    <label>IBAN</label>
</RecordType>