force-app/main/default/objects/cpm__Payment_Profile__c/recordTypes/cpm__Legacy_Bank_Account.recordType-meta.xml
<RecordType>
    <fullName>cpm__Legacy_Bank_Account</fullName>
    <active>true</active>
    <description>Stores bank account information (pre-IBAN)</description>
    <label>Legacy Bank Account</label>
</RecordType>